styles/main_styles.css
@charset "utf-8";
/* CSS Document */

/******************************

[Table of Contents]

1. Fonts
2. Body and some general stuff
3. Header
4. Menu
5. Home
6. Boxes
7. About
8. Testimonials
9. Gallery
10. Services
11. Blog
12. Footer


******************************/

/***********
1. Fonts
***********/

@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');

/*********************************
2. Body and some general stuff
*********************************/

*
{
	margin: 0;
	padding: 0;
	-webkit-font-smoothing: antialiased;
	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
	text-shadow: rgba(0,0,0,.01) 0 0 1px;
}
body
{
	font-family: 'Montserrat', sans-serif;
	font-size: 14px;
	font-weight: 400;
	background: #FFFFFF;
	color: #a5a5a5;
}
div
{
	display: block;
	position: relative;
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
ul
{
	list-style: none;
	margin-bottom: 0px;
}
p
{
	font-family: 'Montserrat', sans-serif;
	font-size: 14px;
	line-height: 2;
	font-weight: 400;
	color: #535353;
	-webkit-font-smoothing: antialiased;
	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
	text-shadow: rgba(0,0,0,.01) 0 0 1px;
}
p a
{
	display: inline;
	position: relative;
	color: inherit;
	border-bottom: solid 1px #ffa07f;
	-webkit-transition: all 200ms ease;
	-moz-transition: all 200ms ease;
	-ms-transition: all 200ms ease;
	-o-transition: all 200ms ease;
	transition: all 200ms ease;
}
p:last-of-type
{
	margin-bottom: 0;
}
a
{
	-webkit-transition: all 200ms ease;
	-moz-transition: all 200ms ease;
	-ms-transition: all 200ms ease;
	-o-transition: all 200ms ease;
	transition: all 200ms ease;
}
a, a:hover, a:visited, a:active, a:link
{
	text-decoration: none;
	-webkit-font-smoothing: antialiased;
	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
	text-shadow: rgba(0,0,0,.01) 0 0 1px;
}
p a:active
{
	position: relative;
	color: #FF6347;
}
p a:hover
{
	color: #FFFFFF;
	background: #ffa07f;
}
p a:hover::after
{
	opacity: 0.2;
}
::selection
{
	background: rgba(249,140,0,0.75);
	color: #FFFFFF;
}
p::selection
{
	
}
h1{font-size: 48px;}
h2{font-size: 36px;}
h3{font-size: 24px;}
h4{font-size: 18px;}
h5{font-size: 14px;}
h1, h2, h3, h4, h5, h6
{
	font-family: 'Montserrat', sans-serif;
	-webkit-font-smoothing: antialiased;
	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
	text-shadow: rgba(0,0,0,.01) 0 0 1px;
	line-height: 1.2;
}

/* Header phone/link color override - keep phone links white */
.header .phone a,
.header .phone a:visited,
.header .phone a:hover,
.header .phone a:active {
	color: #ffffff;
	text-decoration: none;
}

/* Footer contact & social styles */
.footer_contact {
	margin-top: 18px;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 12px;
	color: #ffffff;
}
.footer_contact .footer_phones a {
	color: #ffffff;
	font-weight: 600;
}
.footer_contact .footer_phones a:hover { text-decoration: underline; }
.footer_contact .footer_socials a {
	color: #ffffff;
	margin-left: 8px;
	font-size: 18px;
	display: inline-block;
}
.footer_contact .footer_socials a:hover {
	color: #ff9711;
}
@media (max-width: 767px) {
	.footer_contact { justify-content: center; text-align: center; }
}

/* Footer layout: about + contact + newsletter row */
.footer_row {
	display: flex;
	align-items: flex-start;
	gap: 28px;
	margin-top: 18px;
	flex-wrap: wrap;
}
.footer_about {
	max-width: 380px;
	color: #ffffff;
}
.footer_about h4 {
	color: #ffffff;
	font-size: 18px;
	margin: 0 0 8px 0;
}
.footer_about p {
	color: #d6d6d6;
	line-height: 1.6;
	margin: 0;
}
@media (max-width: 767px) {
	.footer_row { justify-content: center; }
	.footer_about { max-width: 100%; text-align: center; }
}
h1::selection, 
h2::selection, 
h3::selection, 
h4::selection, 
h5::selection, 
h6::selection
{
	
}
.form-control
{
	color: #db5246;
}
section
{
	display: block;
	position: relative;
	box-sizing: border-box;
}
.clear
{
	clear: both;
}
.clearfix::before, .clearfix::after
{
	content: "";
	display: table;
}
.clearfix::after
{
	clear: both;
}
.clearfix
{
	zoom: 1;
}
.float_left
{
	float: left;
}
.float_right
{
	float: right;
}
.trans_200
{
	-webkit-transition: all 200ms ease;
	-moz-transition: all 200ms ease;
	-ms-transition: all 200ms ease;
	-o-transition: all 200ms ease;
	transition: all 200ms ease;
}
.trans_300
{
	-webkit-transition: all 300ms ease;
	-moz-transition: all 300ms ease;
	-ms-transition: all 300ms ease;
	-o-transition: all 300ms ease;
	transition: all 300ms ease;
}
.trans_400
{
	-webkit-transition: all 400ms ease;
	-moz-transition: all 400ms ease;
	-ms-transition: all 400ms ease;
	-o-transition: all 400ms ease;
	transition: all 400ms ease;
}
.trans_500
{
	-webkit-transition: all 500ms ease;
	-moz-transition: all 500ms ease;
	-ms-transition: all 500ms ease;
	-o-transition: all 500ms ease;
	transition: all 500ms ease;
}
.trans_800
{
	-webkit-transition: all 800ms ease;
	-moz-transition: all 800ms ease;
	-ms-transition: all 800ms ease;
	-o-transition: all 800ms ease;
	transition: all 800ms ease;
}
.fill_height
{
	height: 100%;
}
.super_container
{
	width: 100%;
	overflow: hidden;
}
.prlx_parent
{
	overflow: hidden;
}
.prlx
{
	height: 130% !important;
}

/* Ladies-only block styles */
.ladies_box {
	background: #fffaf6;
	border: 1px solid #ffe6d2;
	padding: 35px 28px;
	border-radius: 8px;
	box-shadow: 0 4px 12px rgba(0,0,0,0.03);
	margin-top: 28px;
}
.ladies_box .service_title {
	font-size: 28px;
	color: #262626;
	margin-bottom: 8px;
}
.ladies_list {
	list-style: none;
	padding: 0;
	margin: 0 0 8px 0;
}
.ladies_list li {
	padding: 8px 0;
	font-weight: 600;
	color: #444;
}
.ladies_list li i {
	color: #ff9711;
	margin-right: 10px;
}
.ladies_note {
	margin-top: 8px;
	color: #777;
}
@media (max-width: 767px) {
	.ladies_left, .ladies_right { width: 100%; padding: 8px 0; }
	.ladies_box { padding: 18px; }
}

/* Compact styling for "Conditions We Support" list */
.services.conditions .service {
	background: transparent;
	box-shadow: none;
	padding: 6px 0;
	border: 0;
}
/* ... */

